13879 flock(3C) on NFS files should fail with EOPNOTSUPP Reviewed by: Andy Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@mnx.io>